--- a/Public/css/Formulario_ingreso.css
+++ b/Public/css/Formulario_ingreso.css
@@ -47,7 +47,7 @@ body{
 }
 /***FIN Barra cabecera********/
 
-/***INICIO Logo, buscador y carrito********/
+/***INICIO Logo********/
 .container-main {
     display: flex; 
     justify-content: space-between;
@@ -56,6 +56,107 @@ body{
     margin-top: 10px;
     margin-left: 100px;
 }
+
+/***INICIO Logo********/
+
+/***Formulario Ingreso********/
+
+form{
+    width: 450px;
+    height:700px ;
+    background-color:#2A2D43;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 90px;
+   
+}
+
+.imagen_login{
+
+    width: 400px;
+    height:500px ;
+}
+
+.ingreso{
+    display: flex;
+
+    
+}
+
+.Marco{
+    width: 400px;
+    height:500px ;
+    background-color:#2A2D43;
+}
+
+
+input{
+    display: block;
+    width: 90%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    
+}
+
+label{
+    font-family: 'Delius Unicase', cursive;
+    color:#C5C3C3;
+    font-size: small;
+}
+
+a{
+    text-decoration: none;
+    color: #C5C3C3;
+    font-family: 'Delius Unicase', cursive;
+    font-size: small;
+}
+
+.crea{
+    color: #ff84e8;
+    margin-left: 40px;
+}
+
+.boton{
+    font-family: 'Delius Unicase', cursive;
+    margin-top: 60px;
+    font-weight: bold;
+    font-size: small;
+    height: 40px;
+}
+
+.formulario{
+margin-top: 90px;
+margin-left: 30px;
+
+
+}
+
+.usuario{
+    width: 100px;
+    height:100px ;
+    margin-left: 170px;
+    margin-top: 50px;
+
+    
+   }
+
+   .olvido{
+    margin-left: 105px;
+   
+   }
+
+   .text{
+       border: none;
+       background-color: #2A2D43;
+       border-bottom: 1px solid gray;
+   }
+
+   .linea{
+       margin-top: 70px;
+       padding: 10px;
+       border-top: 1px  solid gray;
+   }
+
 
 /***INICIO Footer********/
 .footer-box {
