--- a/views/Formulario_ingreso.html
+++ b/views/Formulario_ingreso.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/Formulario_ingreso.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -30,6 +34,30 @@
        
     </main>
 
+<div class="ingreso"> 
+    
+    <!-- <div class="Marco"></div> -->
+    <!-- <img class="imagen_login" src="images/pexels-victoria-borodinova-1620675.jpg" alt=""> -->
+    <form action="">
+
+        <img class="usuario" src="images/usuario.png">
+<div class="formulario">
+    
+    <label>E-mail</label>
+    <input class="text" type="email" name="correo" required>
+    <label>Contraseña</label>
+    <input class="text" type="password" name="contraseña" required>
+    <a class="olvido" href="#">¿Olvido su contraseña?</a>
+    <input class="boton" type="submit" value="Login">
+    <div class="linea">
+    <a href="#">¿No tienes cuenta?</a>
+    <a class="crea" href="#">Crea una cuenta</a>
+    </div>
+</div>
+
+
+    </form>
+</div>
 
     <footer>
         <div class="footer-box">
