--- a/views/Formulario_ingreso.html
+++ b/views/Formulario_ingreso.html
@@ -36,8 +36,12 @@
 
 <div class="ingreso"> 
     
-    <!-- <div class="Marco"></div> -->
-    <!-- <img class="imagen_login" src="images/pexels-victoria-borodinova-1620675.jpg" alt=""> -->
+    <div class="Marco">
+    <img class="logo2" src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
+    <img class="imagen_login" src="images/pexels-victoria-borodinova-1620675.jpg" alt=""> 
+    <p class="eslogan">¡La vida es para jugar!</p>
+    </div>
+    
     <form action="">
 
         <img class="usuario" src="images/usuario.png">
