--- a/views/Formulario_registro.html
+++ b/views/Formulario_registro.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
@@ -34,6 +35,28 @@
        
     </main>
 
+    
+    <form action="">
+
+<div class="formulario">
+
+    <h2>Registrarse</h2>
+    <label>Nombre</label>
+    <input class="text" type="email" name="correo" required>
+    <label>Apellido paterno</label>
+    <input class="text" type="password" name="contraseña" required>
+    <label>Apellido materno</label>
+    <input class="text" type="email" name="correo" required>
+    <label>E-mail</label>
+    <input class="text" type="password" name="contraseña" required>
+    <label>Contraseña</label>
+    <input class="text" type="password" name="contraseña" required>
+    <label>Repetir contraseña</label>
+    <input class="text" type="password" name="contraseña" required>
+    <input class="boton" type="submit" value="Aceptar">
+
+    </form>
+</div>
 
     <footer>
         <div class="footer-box">
