--- a/Public/css/Formulario_ingreso.css
+++ b/Public/css/Formulario_ingreso.css
@@ -57,9 +57,9 @@ body{
     margin-left: 100px;
 }
 
-/***INICIO Logo********/
+/***FINAL Logo********/
 
-/***Formulario Ingreso********/
+/***INICIO Formulario Ingreso********/
 
 form{
     width: 450px;
@@ -174,6 +174,8 @@ margin-left: 30px;
     font-weight: bold;
     color:#1D3E94;
 }
+
+/***FINAL Formulario Ingreso********/
 
 /***INICIO Footer********/
 .footer-box {
