--- a/Public/css/Formulario_registro.css
+++ b/Public/css/Formulario_registro.css
@@ -47,7 +47,7 @@ body{
 }
 /***FIN Barra cabecera********/
 
-/***INICIO Logo, buscador y carrito********/
+/***INICIO Logo********/
 .container-main {
     display: flex; 
     justify-content: space-between;
@@ -56,6 +56,94 @@ body{
     margin-top: 10px;
     margin-left: 100px;
 }
+
+/***FINAL Logo********/
+
+/***INICIO Formulario Ingreso********/
+
+form{
+    width: 450px;
+    height:850px ;
+    background-color:#2A2D43;
+    margin: auto;  
+    margin-bottom: 60px;
+    border-radius: 20px;
+    
+}
+
+
+.ingreso{
+    display: flex;
+    background-color:#9198A9;
+    width: 870px;
+    height:700px ;
+    margin: auto;
+    margin-bottom: 100px;
+   
+}
+
+
+input{
+    display: block;
+    width: 90%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    
+}
+
+label{
+    font-family: 'Delius Unicase', cursive;
+    color:#C5C3C3;
+    font-size: small;
+}
+
+a{
+    text-decoration: none;
+    color: #C5C3C3;
+    font-family: 'Delius Unicase', cursive;
+    font-size: small;
+}
+
+.boton{
+    font-family: 'Delius Unicase', cursive;
+    margin-top: 60px;
+    font-weight: bold;
+    font-size: small;
+    height: 40px;
+}
+
+.formulario{
+padding-top: 50px;
+margin-top: 90px;
+margin-left: 30px;
+
+
+}
+
+.usuario{
+    width: 100px;
+    height:100px ;
+    margin-left: 170px;
+    margin-top: 50px;
+
+   }
+
+
+   .text{
+       border: none;
+       background-color: #2A2D43;
+       border-bottom: 1px solid gray;
+   }
+
+   h2{
+    color:#C5C3C3;
+    text-align: center;
+    margin-bottom: 60px;
+   }
+
+   
+
+/***FINAL Formulario Ingreso********/
 
 /***INICIO Footer********/
 .footer-box {
