--- a/views/Formulario_registro.html
+++ b/views/Formulario_registro.html
@@ -42,13 +42,13 @@
 
     <h2>Registrarse</h2>
     <label>Nombre</label>
-    <input class="text" type="email" name="correo" required>
+    <input class="text" type="text" name="nombre" required>
     <label>Apellido paterno</label>
-    <input class="text" type="password" name="contraseña" required>
+    <input class="text" type="text" name="apellido" required>
     <label>Apellido materno</label>
-    <input class="text" type="email" name="correo" required>
+    <input class="text" type="text" name="apellido2" required>
     <label>E-mail</label>
-    <input class="text" type="password" name="contraseña" required>
+    <input class="text" type="email" name="correo" required>
     <label>Contraseña</label>
     <input class="text" type="password" name="contraseña" required>
     <label>Repetir contraseña</label>
@@ -57,6 +57,41 @@
 
     </form>
 </div>
+
+
+<div  class="slider">
+    <ul>
+    
+    <li>
+        <img class="images_slider" src="/images/fisher-price-png.png" alt="">
+        <img class="images_slider" src="/images/Lego-logo.jpg" alt="">
+        <img class="images_slider" src="/images/play-doh-715x400.jpg" alt="">
+    </li>
+    
+    
+    <li>
+        <img class="images_slider" src="/images/Hot-Wheels-Logo.png" alt="">
+        <img class="images_slider" src="/images/Hasbro-Logo.png" alt="">
+        <img class="images_slider" src="/images/2560px-Toys__R__Us_logo.svg.png" alt="">
+    </li>
+    
+    
+    <li>
+        <img class="images_slider" src="/images/Mattel-Logo-1969.png" alt="">
+        <img class="images_slider" src="/images/barbie.png" alt="">
+        <img class="images_slider" src="/images/nenuco-715x400.jpg" alt="">
+    </li>
+    
+    
+    <li>
+        <img class="images_slider" src="/images/Bizak_logo.svg.png" alt="">
+        <img class="images_slider" src="/images/mark.png" alt="">
+        <img class="images_slider" src="/images/a.png" alt="">
+    </li>
+    
+    </ul>
+    
+    </div>
 
     <footer>
         <div class="footer-box">
