--- a/Public/css/Formulario_ingreso.css
+++ b/Public/css/Formulario_ingreso.css
@@ -177,6 +177,60 @@ margin-left: 30px;
 
 /***FINAL Formulario Ingreso********/
 
+/***Inicio slider********/
+
+.slider{
+    background-color:#9b57db;
+    width: 80%;
+    height: 140px;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+@keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+}
+
+.slider ul{
+    display:flex;
+    padding: 0;
+    width: 300%;
+    animation:  cambio 20s infinite alternate;
+   
+}
+
+.slider li{
+    list-style: none;
+    width: 100%;
+    
+}
+
+.images_slider{
+
+    width: 200px ;
+    height: 100px;
+    margin-top: 10px;
+}
+
+
+
+.slider img{
+width: 30%;
+
+}
+
+/***Fin slider********/
+
+
 /***INICIO Footer********/
 .footer-box {
     display: flex;
