--- a/views/Formulario_ingreso.html
+++ b/views/Formulario_ingreso.html
@@ -37,7 +37,7 @@
 <div class="ingreso"> 
     
     <div class="Marco">
-    <img class="logo2" src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
+        <p class="eslogan">Iniciar sesión</p>
     <img class="imagen_login" src="images/pexels-victoria-borodinova-1620675.jpg" alt=""> 
     <p class="eslogan">¡La vida es para jugar!</p>
     </div>
@@ -62,6 +62,43 @@
 
     </form>
 </div>
+
+<div  class="slider">
+<ul>
+
+<li>
+    <img class="images_slider" src="/images/fisher-price-png.png" alt="">
+    <img class="images_slider" src="/images/Lego-logo.jpg" alt="">
+    <img class="images_slider" src="/images/play-doh-715x400.jpg" alt="">
+</li>
+
+
+<li>
+    <img class="images_slider" src="/images/Hot-Wheels-Logo.png" alt="">
+    <img class="images_slider" src="/images/Hasbro-Logo.png" alt="">
+    <img class="images_slider" src="/images/2560px-Toys__R__Us_logo.svg.png" alt="">
+</li>
+
+
+<li>
+    <img class="images_slider" src="/images/Mattel-Logo-1969.png" alt="">
+    <img class="images_slider" src="/images/barbie.png" alt="">
+    <img class="images_slider" src="/images/nenuco-715x400.jpg" alt="">
+</li>
+
+
+<li>
+    <img class="images_slider" src="/images/Bizak_logo.svg.png" alt="">
+    <img class="images_slider" src="/images/mark.png" alt="">
+    <img class="images_slider" src="/images/a.png" alt="">
+</li>
+
+</ul>
+
+</div>
+
+
+
 
     <footer>
         <div class="footer-box">
