--- a/views/home.html
+++ b/views/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/slider.css">
 
     <title>Playground-Jugueteria</title>
 </head>
@@ -52,7 +53,22 @@
     <!--Slide seccion-->
     <section>
         <div class="slide-container">
-            <h1>SLIDE</h1>
+            <div class="slider">
+                <ul>
+                    <li>
+      <img src="http://dominicushoeve.com/wp-content/uploads/ktz/latest-high-resolution-wallpaper-1920x1080-70558-pictures-high-resolution-wallpaper-30whtvl34j4r12m8b0c1sa.jpg" alt="">
+     </li>
+                    <li>
+      <img src="http://youghaltennisclub.ie/wp-content/uploads/2014/06/Tennis-Wallpaper-High-Definition-700x300.jpg" alt="">
+    </li>
+                    <li>
+      <img src="http://welltechnically.com/wp-content/uploads/2013/08/android-wallpapers-700x300.jpg" alt="">
+    </li>
+                    <li>
+      <img src="http://welltechnically.com/wp-content/uploads/2013/09/android-widescreen-wallpaper-14165-hd-wallpapers-700x300.jpg" alt="">
+    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <div class="info-destacados">
