--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/66932f2acc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/style-producto.css">
+    <link rel="stylesheet" href="css/productDetail.css">
 
 
     <title>Playground-Jugueteria</title>
