--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/66932f2acc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/style-producto.css">
+    <link rel="stylesheet" href="css/productDatail.css">
 
 
     <title>Playground-Jugueteria</title>
@@ -57,7 +57,7 @@
     <!--Detalle de Producto seccion-->
     <div class="container-detalle">
         <div class="imagen">
-            <img src="/images/Design/muneca.jpg"  alt="muneca"></img></div>
+            <img src="/images/muneca.jpg"  alt="muneca"></img></div>
             <div class="detalle">
                 <h2>Muñeca con asiento de auto</h2>
                 <p>Código: 001</p>
