--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/66932f2acc.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/productDatail.css">
+    <link rel="stylesheet" href="css/productDetail.css">
 
 
 
@@ -69,12 +69,12 @@
                 <p>Precio: $5.400,00</p>
                 <p>Stock: SI</p>
                 
-                <h4 class="boton agregar"><input type="number" name=numero>Agregar</h4>
+                <h4 class="boton agregar"><input type="number" name=numero><input class="#" type="button" value="Agregar"/></h4>
                 <h4 class="boton-guardar">
-                    <i class="far fa-star"></i>Guardar</h4>
+                    <input class="botones" type="button" value="Guardar"/>
                     <div class="metodos-aceptados">
                         <h4>Métodos aceptados</h4>
-                            <ul>
+                            <ul class="orden-metodos">
                                 <li><i class="fas fa-money-bill-wave"></i></li>
                                 <li><i class="fab fa-cc-visa"></i></li>
                                 <li><i class="fab fa-cc-mastercard"></i></li>
