--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -1,5 +1,5 @@
 *{
-    margin: 10px;
+    margin: 6px;
     padding: 0px;
     box-sizing: border-box;
 }
@@ -134,33 +134,153 @@ body{
 /***FIN Menu********/
 
 /***INICIO Slide********/
-.slide-container {
-    width: 100%;
-    height: 400px;
-    background-color: #e1e1e1;
-    border-radius: 10px;
+
+/* Width of carousel */
+#window, #slide-container {
+    width: auto;
+
 }
+
+/* Height of carousel */
+#slide-container {
+   height: 600px;
+   overflow: hidden; 
+   position: relative; 
+   object-fit: contain;
+   overflow: hidden;
+   display:flex;
+   justify-content:center;
+   align-items: center;
+}
+#slide-container img {
+    max-width: 1200px;
+    max-height:700px;
+}
+
+.slide {
+   width: 100%; 
+   min-height: 200px; 
+}
+
+.slides {
+   display: block; 
+}
+
+/* Style of arrows */
+.arrow {
+   color: rgb(106, 101, 101); 
+   font-size: 26px; 
+   position: absolute; 
+   top: 50%; 
+   transform: translate(0%, -50%); 
+   padding: 16px; 
+   background-color: rgba(0,0,0,0); 
+   transition: background-color 0.3s ease; 
+}
+.arrow-left {
+    color: rgb(106, 101, 101); 
+    font-size: 26px; 
+    position: absolute; 
+    top: 50%; 
+    left: 5px;
+    transform: translate(0%, -50%); 
+    padding: 16px; 
+    background-color: rgba(0,0,0,0); 
+    transition: background-color 0.3s ease; 
+    
+ }
+
+.arrow:hover {
+   cursor: pointer;
+   background-color: var(--transparent-grey); 
+}
+.arrow-left:hover {
+    cursor: pointer;
+    background-color: var(--transparent-grey); 
+ }
+
+#next {
+   left: 100%; 
+   transform: translate(-100%, -50%); 
+   border-radius: 4px 0px 0px 4px; 
+}
+
+#previous {
+   border-radius: 0px 4px 4px 0px; 
+}
+
+#text-bar {
+   background-color: var(--transparent-grey);
+   width: 100%;
+   height: 36px; 
+   position: absolute; 
+   top: 100%;
+   transform: translate(0%, -100%);  
+   text-align: center; 
+   height: 36px;
+ line-height: 36px;
+}
+
+#place {
+   padding: 0px;
+   margin: 0px; 
+   color: white;
+   position: relative;
+   display: inline-block;
+}
+
+#dotsContainer {
+   width: 100%;
+   height: 20px; 
+   text-align: center; 
+}
+
+.dots {
+   width: 8px;
+   height: 8px;
+   background-color: rgba(0,0,0,0.2); 
+   border-radius: 100%; 
+   display: inline-block; 
+   margin: 8px 2px; 
+}
+
+.dots:hover {
+   cursor: pointer; 
+   background-color: rgba(0,0,0,0.4);
+}
+
+.activeDot {
+   background-color: rgba(0,0,0,0.6); 
+}
+
+
 /***FIN Slide********/
 
 /***INICIO productos Destacados********/
 .destacados {
     display: flex;
     align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 50px;
+    
 }
 .destacados .destacados-box1 {
-    background-color: #e1e1e1;
-    width:50%;
+    background-color: white;
+    width:100%;
     height: 200px;
     border-radius: 10px;
     
 }
-.destacados .destacados-box2 {
-    background-color: #e1e1e1;
-    width:50%;
+.destacados .destacados-box1 img {
+    width: 200px;
     height: 200px;
-    margin: auto;
-    border-radius: 0px;
+    object-fit: contain;
+    margin: 10px;
+    margin-left: 30px;
+
 }
+
 
 .slide-container h1{
     text-align: center;
@@ -172,11 +292,62 @@ body{
 /***FIN productos Destacados********/
 
 /***INICIO nuestras marcas********/
-.nuestras-marcas-box {
-    width: 100%;
-    height: 180px;
-    background-color: #e1e1e1;
+
+#marcas h3{
+   text-align: center;
+    margin-top: 90px;
 }
+.slider{
+    background-color:#ccc9ce;
+    width: auto;
+    height: 140px;
+    margin: auto;
+    margin-top: 40px;
+    margin-left: 5px;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+@keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+}
+
+.slider ul{
+    display:flex;
+    padding: 0;
+    width: 300%;
+    animation:  cambio 20s infinite alternate;
+   
+}
+
+.slider li{
+    list-style: none;
+    width: 100%;
+    
+}
+
+.images_slider{
+
+    width: 200px ;
+    height: 100px;
+    object-fit: contain;
+    margin-top: 10px;
+}
+
+
+.slider img{
+width: 30%;
+
+}
+
 
 /***INICIO Footer********/
 .footer-box {
@@ -186,6 +357,7 @@ body{
     width: 100%;
     height: 300px;
     background-color: #CDABED;
+    margin-top: 40px;
 }
 .footer-box h3 {
     text-align: start;
@@ -227,5 +399,10 @@ body{
     width: 360px;
     height:250px;
     border: solid 1px #393939;
+}
+.footer-box .mapa-box iframe {
+    width: 360px;
+    height:250px;
+    margin: 0;
 }
 /***FIN Footer********/
