--- a/Public/css/productDetail.css
+++ b/Public/css/productDetail.css
@@ -227,6 +227,7 @@ body{
     width: 100%;
     height: 300px;
     background-color: #CDABED;
+    margin-top: 40px;
 }
 .footer-box h3 {
     text-align: start;
@@ -268,5 +269,10 @@ body{
     width: 360px;
     height:250px;
     border: solid 1px #393939;
+}
+.footer-box .mapa-box iframe {
+    width: 360px;
+    height:250px;
+    margin: 0;
 }
 /***FIN Footer********/
