--- a/Public/css/register.css
+++ b/Public/css/register.css
@@ -138,12 +138,14 @@ margin-left: 30px;
 /***Inicio slider********/
 
 .slider{
-    background-color:#9b57db;
-    width: 80%;
+    background-color:#ccc9ce;
+    width: auto;
     height: 140px;
     margin: auto;
+    margin-top: 40px;
+    margin-left: 5px;
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 5px;
 }
 
 @keyframes cambio {
@@ -176,6 +178,7 @@ margin-left: 30px;
 
     width: 200px ;
     height: 100px;
+    object-fit: contain;
     margin-top: 10px;
 }
 
@@ -184,6 +187,7 @@ margin-left: 30px;
 width: 30%;
 
 }
+
 
 /***Fin slider********/
 
@@ -195,6 +199,7 @@ width: 30%;
     width: 100%;
     height: 300px;
     background-color: #CDABED;
+    margin-top: 40px;
 }
 .footer-box h3 {
     text-align: start;
@@ -237,6 +242,10 @@ width: 30%;
     height:250px;
     border: solid 1px #393939;
 }
+.footer-box .mapa-box iframe {
+    width: 360px;
+    height:250px;
+    margin: 0;
+}
 /***FIN Footer********/
-
 
