--- a/views/register.html
+++ b/views/register.html
@@ -93,7 +93,8 @@
     
     </div>
 
-    <footer>
+     <!--Footer-->
+     <footer id="contacto">
         <div class="footer-box">
             <div class="contacto">
             <h3>CONTACTENOS</h3>
@@ -119,7 +120,9 @@
                     </ul>
             </div>
             <div>
-                <div class="mapa-box"></div>
+                <div class="mapa-box">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d255858.18448484907!2d-74.11976343055036!3d40.697663748391925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses!2scl!4v1643680349834!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </div>
         </div>
     </footer>
