--- a/views/productCart.html
+++ b/views/productCart.html
@@ -59,7 +59,7 @@
 
     <main class="ProductoComprado">
         <div class="ProductoComprado-foto">
-            <img src="images/Design/FotoProducto1.jpg"  alt="images/Design/FotoProducto1.jpg"></img></div>
+            <img src="images/FotoProducto1.jpg"  alt="images/Design/FotoProducto1.jpg"></img></div>
 
          <div class="ProductoComprado-descripcion">
 
