--- a/views/register.html
+++ b/views/register.html
@@ -21,17 +21,23 @@
         </div>
         <!--Boton de Ingresar y Resgistro-->
         <div class="button-header">
-            <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
-            <button type="button" name="ingresar" class="btn-registrarse">Regístrarse</button>
+            <div class="button-header">
+                <a href="/login">
+                    <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
+                </a>
+                <a href="/register">
+                    <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
+                </a>
+            </div>
         </div>
         </div>
     </header>
 
 
     <main class="container-main">
-        <div class="logo">
+        <a href="/">
             <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
-        </div>
+        </a>
        
     </main>
 
