--- a/views/index.html
+++ b/views/index.html
@@ -20,27 +20,33 @@
         </div>
         <!--Boton de Ingresar y Resgistro-->
         <div class="button-header">
-            <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
-            <button type="button" name="ingresar" class="btn-registrarse">Regístrarse</button>
+            <a href="/login">
+                <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
+            </a>
+            <a href="/register">
+                <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
+            </a>
         </div>
         </div>
     </header>
     <!--Logo, buscador y carrito de compras-->
     <main class="container-main">
-        <div class="logo">
-            <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria">
-            <a href="#home"></a>
-        </img>
-        </div>
+        
+            <a href="/">
+                <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
+            </a>
+       
         <div class="buscar-wrapper">
             <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
             <button type="button" class="fas fa-search" id="lupa"></button>
         </div>
         <div class="container-carrito">
             <div class="carro">
-                <i class="fas fa-shopping-cart" id="icono-carrito">
-                    <div class="box-carrito"></div>
-                </i>
+                <a href="/productCart">
+                    <i class="fas fa-shopping-cart" id="icono-carrito">
+                        <div class="box-carrito"></div>
+                    </i>
+                </a>
             </div>
         </div>
     </main>
@@ -102,7 +108,9 @@
             <img src="images/destacado-spiderman.jpeg" alt="Imagen spiderman">
             <img src="images/destacado-superman.jpeg" alt="Imagen superman">
             <img src="images/destacado-starwars.jpeg" alt="Imagen star">
-            <img src="images/destacado-mariobros.jpeg" alt="Imagen mariobros">
+            <a href="/productDetail">
+                <img src="images/muneca.jpg" alt="Imagen mariobros">
+            </a>
             
         </div>
         <div class="destacados-box2">
