--- a/views/productCart.html
+++ b/views/productCart.html
@@ -18,25 +18,32 @@
         </div>
         <!--Boton de Ingresar y Resgistro-->
         <div class="button-header">
-            <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
-            <button type="button" name="ingresar" class="btn-registrarse">Regístrarse</button>
+            <a href="/login">
+                <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
+            </a>
+            <a href="/register">
+                <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
+            </a>
         </div>
         </div>
     </header>
     <!--Logo, buscador y carrito de compras-->
     <main class="container-main">
-        <div class="logo">
-            <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
-        </div>
+            <a href="/">
+                <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
+            </a>
+    
         <div class="buscar-wrapper">
             <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
             <button type="button" class="fas fa-search" id="lupa"></button>
         </div>
         <div class="container-carrito">
             <div class="carro">
-                <i class="fas fa-shopping-cart" id="icono-carrito">
-                    <div class="box-carrito"></div>
-                </i>
+                <a href="/productDetail">
+                    <i class="fas fa-shopping-cart" id="icono-carrito">
+                        <div class="box-carrito"></div>
+                    </i>
+                </a>
             </div>
         </div>
     </main>
@@ -59,7 +66,7 @@
 
     <main class="ProductoComprado">
         <div class="ProductoComprado-foto">
-            <img src="images/Design/FotoProducto1.jpg"  alt="images/Design/FotoProducto1.jpg"></img></div>
+            <img src="images/muneca.jpg"  alt="images/Design/FotoProducto1.jpg"></img></div>
 
          <div class="ProductoComprado-descripcion">
 
