--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -24,25 +24,33 @@
         </div>
         <!--Boton de Ingresar y Resgistro-->
         <div class="button-header">
-            <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
-            <button type="button" name="ingresar" class="btn-registrarse">Regístrarse</button>
+            <a href="/login">
+                <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
+            </a>
+            <a href="/register">
+                <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
+            </a>
         </div>
         </div>
     </header>
     <!--Logo, buscador y carrito de compras-->
     <main class="container-main">
-        <div class="logo">
-            <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
-        </div>
+        
+            <a href="/">
+                <img src="images/Design/logo.png"  alt="Logo Playground Jugueteria"></img>
+            </a>
+     
         <div class="buscar-wrapper">
             <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
             <button type="button" class="fas fa-search" id="lupa"></button>
         </div>
         <div class="container-carrito">
             <div class="carro">
-                <i class="fas fa-shopping-cart" id="icono-carrito">
-                    <div class="box-carrito"></div>
-                </i>
+                <a href="/productDetail">
+                    <i class="fas fa-shopping-cart" id="icono-carrito">
+                        <div class="box-carrito"></div>
+                    </i>
+                </a>
             </div>
         </div>
     </main>
@@ -91,12 +99,60 @@
     </div>
     <!--Productos Destacados-->
     <section class="destacados">
-        <div class="destacados-box1"></div>
-        <div class="destacados-box2"></div>
+        <div class="destacados-box1">
+            <img src="images/destacado-frozen.jpeg" alt="Imagen frozen">
+            <img src="images/destacado-toyStory.jpeg" alt="Imagen toyStory">
+            <img src="images/destacado-spiderman.jpeg" alt="Imagen spiderman">
+            <img src="images/destacado-superman.jpeg" alt="Imagen superman">
+            <img src="images/destacado-starwars.jpeg" alt="Imagen star">
+            <a href="/productDetail">
+                <img src="images/muneca.jpg" alt="Imagen mariobros">
+            </a>
+            
+        </div>
+        <div class="destacados-box2">
+            
+        </div>
     </section>
     <!--Nuestras Marcas-->
-    <section class="nuestras-marcas">
-        <div class="nuestras-marcas-box"></div>
+    <section id="marcas">
+        <h3>
+            NUESTRAS MARCAS
+        </h3>
+        <div  class="slider">
+            <ul>
+            
+            <li>
+                <img class="images_slider" src="/images/fisher-price-png.png" alt="">
+                <img class="images_slider" src="/images/Lego-logo.jpg" alt="">
+                <img class="images_slider" src="/images/play-doh-715x400.jpg" alt="">
+            </li>
+            
+            
+            <li>
+                <img class="images_slider" src="/images/Hot-Wheels-Logo.png" alt="">
+                <img class="images_slider" src="/images/Hasbro-Logo.png" alt="">
+                <img class="images_slider" src="/images/2560px-Toys__R__Us_logo.svg.png" alt="">
+            </li>
+            
+            
+            <li>
+                <img class="images_slider" src="/images/Mattel-Logo-1969.png" alt="">
+                <img class="images_slider" src="/images/barbie.png" alt="">
+                <img class="images_slider" src="/images/nenuco-715x400.jpg" alt="">
+            </li>
+            
+            
+            <li>
+                <img class="images_slider" src="/images/Bizak_logo.svg.png" alt="">
+                <img class="images_slider" src="/images/mark.png" alt="">
+                <img class="images_slider" src="/images/a.png" alt="">
+            </li>
+            
+            </ul>
+            
+            </div>
+
     </section>
       <!--Footer-->
       <footer id="contacto">
