--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,7 +24,7 @@
         </div>
         <div class="container-carrito">
             <div class="carro">
-                <a href="/productCart">
+                <a href="products/productCart">
                     <i class="fas fa-shopping-cart" id="icono-carrito">
                         <div class="box-carrito"></div>
                     </i>
@@ -36,7 +36,7 @@
     <nav class="main-navbar">
         
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="#">Edades</a></li>
             <li><a href="#contacto">Contacto</a></li>
