--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,10 +5,10 @@
     </div>
     <!--Boton de Ingresar y Resgistro-->
     <div class="button-header">
-        <a href="/login">
+        <a href="/users/login">
             <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
         </a>
-        <a href="/register">
+        <a href="/users/register">
             <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
         </a>
     </div>
