--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -23,7 +23,7 @@
         </div>
         <div class="container-carrito">
             <div class="carro">
-                <a href="/productDetail">
+                <a href="/products/productDetail">
                     <i class="fas fa-shopping-cart" id="icono-carrito">
                         <div class="box-carrito"></div>
                     </i>
@@ -34,7 +34,7 @@
     <!--Menú-->
     <nav class="main-navbar">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#">Marcas</a></li>
             <li><a href="#">Edades</a></li>
             <li><a href="#">Contacto</a></li>
