--- a/src/views/users/form_admin.ejs
+++ b/src/views/users/form_admin.ejs
@@ -34,7 +34,7 @@
     <nav class="main-navbar">
         
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
             <li><a href="#">Edades</a></li>
             <li><a href="#contacto">Contacto</a></li>
