--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include('./partials/head.ejs') %>
     <link rel="stylesheet" href="/stylesheets/styles.css">
-    <script defer src="js/slide.js"></script>
+    <script defer src="/javascripts/slide.js"></script>
 
     <title>Playground-Jugueteria</title>
 </head>
@@ -38,7 +38,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
-            <li><a href="#">Edades</a></li>
+            <li><a href="#">Productos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
