--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -36,7 +36,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="#">Marcas</a></li>
-            <li><a href="#">Edades</a></li>
+            <li><a href="#">Productos</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
