--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -159,7 +159,9 @@ body{
 .detalle {
     width: 60%;
     height: 40%;
-    margin-left: -10%;
+    font-size: 20px;
+  
+  
 }
 
 .container-detalle input {
@@ -180,6 +182,10 @@ body{
 
 .orden-metodos {
     display: flex;
+}
+
+.descripcion, .precio{
+    font-weight: bold;
 }
 
 
@@ -210,6 +216,11 @@ body{
     margin: 10px;
     margin-left: 30px;
 
+}
+
+.imagenes{
+    width: 400px;
+    height: 400px;
 }
 
 
