--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -38,7 +38,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
-            <li><a href="#">Productos</a></li>
+            <li><a href="/products">Productos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
