--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -22,9 +22,9 @@
       <nav class="main-navbar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#">Marcas</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#marcas">Marcas</a></li>
+            <li><a href="/products">Productos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
 </div>
