--- a/src/views/users/form_admin.ejs
+++ b/src/views/users/form_admin.ejs
@@ -36,7 +36,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="#marcas">Marcas</a></li>
-            <li><a href="#">Productos</a></li>
+            <li><a href="/products">Productos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
