Arreglo de rutas

--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -231,6 +231,12 @@ body{
     text-align: center;
     margin-top: 20px;
 }
+
+.editar{
+    
+    font-size: 15px;
+   
+}
 /***FIN productos Destacados********/
 
 /***INICIO nuestras marcas********/
