--- a/src/views/products/formCreate.ejs
+++ b/src/views/products/formCreate.ejs
@@ -29,25 +29,25 @@
     </nav>
 </div>
 
-    <form class="Formulario" action="">
+    <form class="Formulario" action="/products" method="POST">
 
 
         <div class="formato">
         
             <div >
-                <label for="name" class="lnombre">Nombre del producto:</label>
-                <input type="text" id="name" name="name" class="nombre">
+                <label for="titulo" class="lnombre">Nombre del producto:</label>
+                <input type="text" id="titulo" name="titulo" required class="nombre">
             </div>
             <div class="">
-                <label for="price" class="lprecio">Precio del producto:</label>
-                <input type="number" id="price" name="price"  class="precio">
+                <label for="precio" class="lprecio">Precio del producto:</label>
+                <input type="number" id="precio" name="precio" required class="precio">
             </div>
   
     </div>
 
     <div>
-        <label for="descripcion" class="ldescripcion">Descripción:</label>
-        <input type="text" id="descripcion" name="descripcion"  class="descripcion">
+        <label for="descripcionCorta" class="ldescripcion">Descripción:</label>
+        <input type="text" id="descripcionCorta" name="descripcionCorta" required class="descripcion">
     </div>
 
 
