--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -61,7 +61,7 @@
                     
                     <p>$<%= product.precio %></p>
                 
-                
+                    <input class="editar" type="button" value="Editar" >
             
                     </div>
              </div>
